start writing jlmr paper

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -156,3 +156,91 @@
   url = {https://github.com/quarto-dev/quarto-cli}
 }
 
+@article{burknerBrmsPackageBayesian2017,
+  title = {Brms: {{An R}} Package for {{Bayesian}} Multilevel Models Using {{Stan}}},
+  author = {B{\"u}rkner, Paul-Christian},
+  year = {2017},
+  journal = {Journal of Statistical Software},
+  volume = {80},
+  number = {1},
+  pages = {1--28},
+  doi = {10.18637/jss.v080.i01},
+  encoding = {UTF-8}
+}
+
+@misc{capretto2020,
+  title = {Bambi: {{A}} Simple Interface for Fitting {{Bayesian}} Linear Models in {{Python}}},
+  author = {Capretto, Tom{\'a}s and Piho, Camen and Kumar, Ravin and Westfall, Jacob and Yarkoni, Tal and Martin, Osvaldo A.},
+  year = {2020},
+  eprint = {2012.10754},
+  primaryclass = {stat.CO},
+  archiveprefix = {arxiv}
+}
+
+@article{gabryVisualizationBayesianWorkflow2019,
+  title = {Visualization in {{Bayesian Workflow}}},
+  author = {Gabry, Jonah and Simpson, Daniel and Vehtari, Aki and Betancourt, Michael and Gelman, Andrew},
+  year = {2019},
+  month = feb,
+  journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
+  volume = {182},
+  number = {2},
+  pages = {389--402},
+  issn = {0964-1998},
+  doi = {10.1111/rssa.12378},
+  url = {https://doi.org/10.1111/rssa.12378},
+  urldate = {2023-07-14},
+  abstract = {Bayesian data analysis is about more than just computing a posterior distribution, and Bayesian visualization is about more than trace plots of Markov chains. Practical Bayesian data analysis, like all data analysis, is an iterative process of model building, inference, model checking and evaluation, and model expansion. Visualization is helpful in each of these stages of the Bayesian workflow and it is indispensable when drawing inferences from the types of modern, high dimensional models that are used by applied researchers.},
+  file = {/Users/tedgro/Zotero/storage/R7L5AZCN/Gabry et al. - 2019 - Visualization in Bayesian Workflow.pdf;/Users/tedgro/Zotero/storage/JLJT6FWE/7070184.html}
+}
+
+
+@article{grinsztajnBayesianWorkflowDisease2021,
+  title = {Bayesian Workflow for Disease Transmission Modeling in {{Stan}}},
+  author = {Grinsztajn, L{\'e}o and Semenova, Elizaveta and Margossian, Charles C. and Riou, Julien},
+  year = {2021},
+  journal = {Statistics in Medicine},
+  volume = {40},
+  number = {27},
+  pages = {6209--6234},
+  issn = {1097-0258},
+  doi = {10.1002/sim.9164},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.9164},
+  urldate = {2022-03-14},
+  abstract = {This tutorial shows how to build, fit, and criticize disease transmission models in Stan, and should be useful to researchers interested in modeling the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) pandemic and other infectious diseases in a Bayesian framework. Bayesian modeling provides a principled way to quantify uncertainty and incorporate both data and prior knowledge into the model estimates. Stan is an expressive probabilistic programming language that abstracts the inference and allows users to focus on the modeling. As a result, Stan code is readable and easily extensible, which makes the modeler's work more transparent. Furthermore, Stan's main inference engine, Hamiltonian Monte Carlo sampling, is amiable to diagnostics, which means the user can verify whether the obtained inference is reliable. In this tutorial, we demonstrate how to formulate, fit, and diagnose a compartmental transmission model in Stan, first with a simple susceptible-infected-recovered model, then with a more elaborate transmission model used during the SARS-CoV-2 pandemic. We also cover advanced topics which can further help practitioners fit sophisticated models; notably, how to use simulations to probe the model and priors, and computational techniques to scale-up models based on ordinary differential equations.},
+  langid = {english},
+  keywords = {Bayesian workflow,compartmental models,epidemiology,infectious diseases},
+  file = {/Users/tedgro/Zotero/storage/2A77N8Q5/Grinsztajn et al. - 2021 - Bayesian workflow for disease transmission modelin.pdf;/Users/tedgro/Zotero/storage/CD546SLU/sim.html}
+}
+
+@misc{pydanticdevelopersPydantic2022,
+  title = {Pydantic},
+  author = {{Pydantic developers}},
+  year = {2022},
+  url = {https://pypi.org/project/pydantic/}
+}
+
+@inproceedings{niels_bantilan-proc-scipy-2020,
+  title = {Pandera: {{Statistical Data Validation}} of {{Pandas Dataframes}}},
+  booktitle = {Proceedings of the 19th {{Python}} in {{Science Conference}}},
+  author = {{Niels Bantilan}},
+  editor = {Agarwal, Meghann and Calloway, Chris and Niederhut, Dillon and {David Shupe}},
+  year = {2020},
+  pages = {116--124},
+  doi = {10.25080/Majora-342d178e-010}
+}
+
+@misc{clickdevelopersClickPythonComposable2022,
+  title = {Click: {{Python}} Composable Command Line Interface Toolkit},
+  author = {{Click Developers}},
+  year = {2022},
+  url = {https://pypi.org/project/click/},
+  howpublished = {Pallets}
+}
+
+@article{stallman1991gnu,
+  title = {{{GNU}} Make-{{A}} Program for Directing Recompilation},
+  author = {Stallman, Richard M and McGrath, Roland},
+  year = {1991},
+  publisher = {{Citeseer}}
+}
