--- a/paper/jmlr_cover_letter.qmd
+++ b/paper/jmlr_cover_letter.qmd
@@ -25,24 +25,20 @@ MIT licence: <https://github.com/teddygroves/bibat/LICENSE>
 
 ## Software version to be reviewed
 
-XXX VERSION XXX
+0.2.0
 
 ## Evidence of active user community
 
-Bibat has XXX GitHub stars and XXX active devlopers. In addition, bibat is a
-PyOpenSci affiliated package: the PyOpenSci community provides rigorous peer
-review (though not publication), publicity, community engagement and help with
-software maintenance.
+Bibat has 16 GitHub stars and has been actively developed over about three
+years. In addition, bibat is a PyOpenSci affiliated package: the PyOpenSci
+community provides rigorous peer review (though not publication), publicity,
+community engagement and help with software maintenance.
 
 ## Suggested reviewers
 
-The following people have already reviewed bibat for PyOpenSci and therefore
-might find it easy to provide another review:
+These people previously reviewed bibat for PyOpenSci and therefore might find it
+easy to provide another review:
 
 - Meenal Jhajharia <meenal@mjhajharia.com>
 - Oriol Abril Plaza <https://github.com/OriolAbril>
 - Alexey Izmailov <alizma@brown.edu>
-
-Editor: @mjhajharia
-Reviewer 1: @OriolAbril
-Reviewer 2: @alizma
