--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -244,3 +244,59 @@
   year = {1991},
   publisher = {{Citeseer}}
 }
+
+@book{boxBayesianInferenceStatistical1992,
+  title = {Bayesian Inference in Statistical Analysis},
+  author = {Box, George E. P. and Tiao, George C.},
+  year = {1992},
+  series = {A {{Wiley-Interscience}} Publication},
+  edition = {Wiley classics library ed},
+  publisher = {{Wiley}},
+  address = {{New York}},
+  isbn = {978-0-471-57428-6},
+  langid = {english},
+  file = {/Users/tedgro/Zotero/storage/7GGTD6UY/Box and Tiao - 1992 - Bayesian inference in statistical analysis.pdf}
+}
+
+@article{strumbeljPresentFutureSoftware,
+  title = {Past, {{Present}}, and {{Future}} of {{Software}} for {{Bayesian Inference}}},
+  author = {{\v S}trumbelj, Erik and {Bouchard-C{\^o}t{\'e}}, Alexandre and Corander, Jukka and Gelman, Andrew and Rue, H{\aa}vard and Murray, Lawrence and Pesonen, Henri and Plummer, Martyn and Vehtari, Aki},
+  abstract = {Software tools for Bayesian inference have undergone rapid evolution in the past three decades, following popularisation of the first generation MCMC-sampler implementations. More recently, exponential growth in the number of users has been stimulated both by the active development of new packages by the machine learning community and popularity of specialist software for particular applications. This review aims to summarize the most popular software and provide a useful map for a reader to navigate the world of Bayesian computation. We anticipate a vigorous continued development of algorithms and corresponding software in multiple research fields, such as probabilistic programming, likelihood-free inference, and Bayesian neural networks, which will further broaden the possibilities for employing the Bayesian paradigm in exciting applications. Key words and phrases: statistics, data analysis, MCMC, computation, probabilistic programming.},
+  langid = {english},
+  file = {/Users/tedgro/Zotero/storage/F55H2HPD/Štrumbelj et al. - Past, Present, and Future of Software for Bayesian.pdf},
+  year = {2024}
+}
+
+@misc{grovesteddySphincter2024,
+  title = {Sphincter},
+  shorttitle = {Teddygroves/Sphincter},
+  author = {Groves, Teddy},
+  year = {2024},
+  month = jan,
+  url = {https://github.com/teddygroves/sphincter},
+  urldate = {2024-01-29},
+  abstract = {statistical analysis of mouse brain blood vessel sphincters - teddygroves/sphincter: statistical analysis of mouse brain blood vessel sphincters},
+  file = {/Users/tedgro/Zotero/storage/QBQIX5BH/sphincter.html}
+}
+
+@misc{grovesteddyDgfreg2023,
+  title = {Dgfreg},
+  author = {Groves, Teddy and Jooste, Jason},
+  year = {2023},
+  month = oct,
+  url = {https://github.com/biosustain/dgfreg},
+  urldate = {2024-01-29},
+  abstract = {Regression models of biochemical formation energies},
+  copyright = {MIT},
+  howpublished = {DTU Biosustain}
+}
+
+@misc{grovesBaseball2022,
+  title = {Baseball},
+  author = {Groves, Teddy},
+  year = {2022},
+  month = oct,
+  url = {https://github.com/teddygroves/baseball},
+  urldate = {2024-01-29},
+  abstract = {Experimenting with extreme value distributions for sports modelling and literate programming}
+}
