--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,29 +1,6 @@
-% Options for packages loaded elsewhere
-\PassOptionsToPackage{unicode}{hyperref}
-\PassOptionsToPackage{hyphens}{url}
-\PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
-%
-\documentclass[
-  letterpaper,
-  DIV=11,
-  numbers=noendperiod]{scrartcl}
+\documentclass[sigconf, review]{acmart}
 
-\usepackage{amsmath,amssymb}
-\usepackage{iftex}
-\ifPDFTeX
-  \usepackage[T1]{fontenc}
-  \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provide euro and other symbols
-\else % if luatex or xetex
-  \usepackage{unicode-math}
-  \defaultfontfeatures{Scale=MatchLowercase}
-  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
-\fi
-\usepackage{lmodern}
-\ifPDFTeX\else
-    % xetex/luatex font selection
-\fi
-% Use upquote if available, for straight quotes in verbatim environments
+
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \IfFileExists{microtype.sty}{% use microtype if available
   \usepackage[]{microtype}
@@ -39,18 +16,54 @@
 }{% if KOMA class
   \KOMAoptions{parskip=half}}
 \makeatother
-\usepackage{xcolor}
-\setlength{\emergencystretch}{3em} % prevent overfull lines
-\setcounter{secnumdepth}{5}
-% Make \paragraph and \subparagraph free-standing
-\ifx\paragraph\undefined\else
-  \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-  \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
+
+%%
+%% This is file `sample-manuscript.tex',
+%% generated with the docstrip utility.
+%%
+%% The original source files were:
+%%
+%% samples.dtx  (with options: `manuscript')
+%%
+%% IMPORTANT NOTICE:
+%%
+%% For the copyright see the source file.
+%%
+%% Any modified versions of this file must be renamed
+%% with new filenames distinct from sample-manuscript.tex.
+%%
+%% For distribution of the original source see the terms
+%% for copying and modification in the file samples.dtx.
+%%
+%% This generated file may be distributed as long as the
+%% original source files, as listed above, are part of the
+%% same distribution. (The sources need not necessarily be
+%% in the same archive or directory.)
+%%
+%%
+%% Commands for TeXCount
+%TC:macro \cite [option:text,text]
+%TC:macro \citep [option:text,text]
+%TC:macro \citet [option:text,text]
+%TC:envir table 0 1
+%TC:envir table* 0 1
+%TC:envir tabular [ignore] word
+%TC:envir displaymath 0 word
+%TC:envir math 0 word
+%TC:envir comment 0 0
+%%
+%%
+%% The first command in your LaTeX source must be the \documentclass command.
+
+
+% Options for packages loaded elsewhere
+\PassOptionsToPackage{unicode}{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+\PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
+
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+
+%% PANDOC PREAMBLE BEGINS
 
 
 \providecommand{\tightlist}{%
@@ -77,35 +90,8 @@
 \makeatletter
 \def\fps@figure{htbp}
 \makeatother
-\newlength{\cslhangindent}
-\setlength{\cslhangindent}{1.5em}
-\newlength{\csllabelwidth}
-\setlength{\csllabelwidth}{3em}
-\newlength{\cslentryspacingunit} % times entry-spacing
-\setlength{\cslentryspacingunit}{\parskip}
-\newenvironment{CSLReferences}[2] % #1 hanging-ident, #2 entry spacing
- {% don't indent paragraphs
-  \setlength{\parindent}{0pt}
-  % turn on hanging indent if param 1 is 1
-  \ifodd #1
-  \let\oldpar\par
-  \def\par{\hangindent=\cslhangindent\oldpar}
-  \fi
-  % set entry spacing
-  \setlength{\parskip}{#2\cslentryspacingunit}
- }%
- {}
-\usepackage{calc}
-\newcommand{\CSLBlock}[1]{#1\hfill\break}
-\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{#1}}
-\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{#1}\break}
-\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
-\KOMAoption{captions}{tableheading}
-\makeatletter
-\makeatother
-\makeatletter
-\makeatother
+\definecolor{mypink}{RGB}{219, 48, 122}
 \makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \AtBeginDocument{%
@@ -142,345 +128,406 @@
 \newcommand*\listoflistings{\listof{codelisting}{List of Listings}}
 \makeatother
 \makeatletter
+\makeatother
+\makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\makeatletter
-\@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
-\makeatother
-\makeatletter
-\@ifundefined{shadecolor}{\definecolor{shadecolor}{rgb}{.97, .97, .97}}
-\makeatother
-\makeatletter
-\makeatother
-\makeatletter
-\makeatother
-\ifLuaTeX
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\urlstyle{same} % disable monospaced font for URLs
+%% PANDOC PREAMBLE ENDS
+
+\setlength{\parindent}{10pt}
+\setlength{\parskip}{0pt}
+
 \hypersetup{
   pdftitle={Bibat: Batteries-include Bayesian Analysis Template},
   pdfauthor={Teddy Groves},
-  pdfkeywords={Bayesian inference,},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
   citecolor={Blue},
-  urlcolor={Blue},
-  pdfcreator={LaTeX via pandoc}}
+  urlcolor={red},
+  pdfcreator={LaTeX via pandoc, via quarto}}
 
-\title{Bibat: Batteries-include Bayesian Analysis Template}
-\author{Teddy Groves}
-\date{}
+%% \BibTeX command to typeset BibTeX logo in the docs
+\AtBeginDocument{%
+  \providecommand\BibTeX{{%
+    Bib\TeX}}}
 
+%% Rights management information.  This information is sent to you
+%% when you complete the rights form.  These commands have SAMPLE
+%% values in them; it is your responsibility as an author to replace
+%% the commands and values with those provided to you when you
+%% complete the rights form.
+\setcopyright{acmcopyright}
+\copyrightyear{2024}
+\acmYear{2024}
+\acmDOI{}
+
+%% These commands are for a PROCEEDINGS abstract or paper.
+\acmConference[KDD]{KDD}{Aug 25--29, 2024}{Barcelona, Esp}
+\acmPrice{}
+\acmISBN{}
+
+%% Submission ID.
+%% Use this when submitting an article to a sponsored event. You'll
+%% receive a unique submission ID from the organizers
+%% of the event, and this ID should be used as the parameter to this command.
+%%\acmSubmissionID{123-A56-BU3}
+
+%%
+%% For managing citations, it is recommended to use bibliography
+%% files in BibTeX format.
+%%
+%% You can then either use BibTeX with the ACM-Reference-Format style,
+%% or BibLaTeX with the acmnumeric or acmauthoryear sytles, that include
+%% support for advanced citation of software artefact from the
+%% biblatex-software package, also separately available on CTAN.
+%%
+%% Look at the sample-*-biblatex.tex files for templates showcasing
+%% the biblatex styles.
+%%
+
+%%
+%% The majority of ACM publications use numbered citations and
+%% references.  The command \citestyle{authoryear} switches to the
+%% "author year" style.
+%%
+%% If you are preparing content for an event
+%% sponsored by ACM SIGGRAPH, you must use the "author year" style of
+%% citations and references.
+%% Uncommenting
+%% the next command will enable that style.
+%%\citestyle{acmauthoryear}
+
+
+%% end of the preamble, start of the body of the document source.
 \begin{document}
-\maketitle
+
+
+%%
+%% The "title" command has an optional parameter,
+%% allowing the author to define a "short title" to be used in page headers.
+\title{Bibat: Batteries-include Bayesian Analysis Template}
+
+%%
+%% The "author" command and its associated commands are used to define
+%% the authors and their affiliations.
+%% Of note is the shared affiliation of the first two authors, and the
+%% "authornote" and "authornotemark" commands
+%% used to denote shared contribution to the research.
+
+
+  \author{Teddy Groves}
+  \orcid{0000-0002-7109-3270}
+            \affiliation{%
+                  \institution{Danish Technical University}
+                                  \city{Kongens Lyngby}
+                                  \country{Denmark}
+                      }
+
+
+%% By default, the full list of authors will be used in the page
+%% headers. Often, this list is too long, and will overlap
+%% other information printed in the page headers. This command allows
+%% the author to define a more concise list
+%% of authors' names for this purpose.
+%\renewcommand{\shortauthors}{Trovato et al.}
+%%
+%% The abstract is a short summary of the work to be presented in the
+%% article.
 \begin{abstract}
-Despite their suitability for many scientific problems and the existence
-of sound theoretical and computational frameworks, adoption of Bayesian
-workflow in science remains a challenge. One reason for the difficulty
-is that it is difficult to write software that implements non-trivial
-Bayesian workflows. We aimed to address this difficulty by developing
-Bibat, a Python package providing an interactive template that targets
-Bayesian statistical analysis projects. Bibat trivialises the otherwise
-painful process of structuring such a project and integrating together
-tools that help with individual parts of a Bayesian workflow, without
-compromising flexibility, scalability, interoperability or
-reproducibility. Bibat is available on the Python Package index,
-documented at \url{https://bibat.readthedocs.io/} and developed at
-\url{https://github.com/teddygroves/bibat/}.
+Bayesian statistical workflow offers a powerful way to learn from data,
+but software software projects that implement complex Bayesian workflows
+in practice are unusual, partly due to the difficulty of orchestrating
+Bayesian statistical software. Bibat addresses this challenge by
+providing a full-featured, scalable Bayesian statistical analysis
+project using an interactive template. Bibat is available on the Python
+Package index, documented at \url{https://bibat.readthedocs.io/} and
+developed at \url{https://github.com/teddygroves/bibat/}. This paper
+explains the motivation for bibat, briefly describes intended usage,
+discusses key design choices, and reviews several examples of bibat's
+use in scientific applications.
 \end{abstract}
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, sharp corners, enhanced, breakable, interior hidden, borderline west={3pt}{0pt}{shadecolor}, frame hidden]}{\end{tcolorbox}}\fi
 
-Many areas of science would benefit from replacing traditional
-statistical methodologies with Bayesian workflow, as described in, for
-example (Gelman et al. 2020; Grinsztajn et al. 2021; Gabry et al. 2019).
+%%
+%% The code below is generated by the tool at http://dl.acm.org/ccs.cfm.
+%% Please copy and paste the code instead of the example below.
+%%
 
-There are now software tools that address most individual aspects of a
-Bayesian workflow, from fetching and manipulating data to specifying,
-computing, storing, inspecting and documenting statistical inferences.
-However, writing a software project implementing a Bayesian workflow
-remains challenging due partly to the difficulty of orchestrating and
-configuring these elements.
+%%
+%% Keywords. The author(s) should pick words that accurately describe
+%% the work being presented. Separate the keywords with commas.
+\keywords{Python, Bayesian workflow, Methodology}
 
-Bibat is a Python package that addresses this difficulty by providing an
-interactive template for Bayesian workflow projects.
+\begin{teaserfigure}
+  \includegraphics[width=\textwidth]{img/workflow.png}
+  \caption{Schematic representation of a Bayesian workflow implemented
+using bibat. The author inspects their analysis's results, edits files
+corresponding to the boxes on the left, runs the command
+\texttt{make\ analysis}, then repeats. Note that this workflow is
+modular, accommodates plurality and results in a final analysis that can
+be fully reproduced using a single command.}
+  \Description{DESCRIPTION}
+\end{teaserfigure}
 
-\hypertarget{installation-and-usage}{%
-\section{Installation and usage}\label{installation-and-usage}}
+%%
+%% This command processes the author and affiliation and title
+%% information and builds the first part of the formatted document.
+\maketitle
 
-Bibat is installed by running the command \texttt{pip\ install\ bibat}
-and then used by running the command \texttt{bibat}.
+\setlength{\parskip}{-0.1pt}
 
-This command triggers an interactive form which prompts the user for
-configuration information including project and repository name, author
-name, a short description and choices of open source licence options,
-documentation formats and whether to include tests and continuous
-integration.
+\section{Introduction: the problem of orchestrating Bayesian workflow
+software}\label{introduction-the-problem-of-orchestrating-bayesian-workflow-software}
 
-Bibat then creates a folder with the chosen repository name in the
-current working directory, containing code that implements bibat's
-example analysis.
+The idea that Bayesian statistical analysis comprises not just
+inference, but also specific approaches to related activities like data
+preparation, model design, diagnosis, debugging and criticism, dates at
+least to \citet{boxBayesianInferenceStatistical1992}. There is
+increasing scholarly recognition of the need for a holistic view of
+``Bayesian workflow''
+\citep{gelmanBayesianWorkflow2020, grinsztajnBayesianWorkflowDisease2021, gabryVisualizationBayesianWorkflow2019}.
+Relatedly, software tools now exist that address most individual aspects
+of a Bayesian workflow: see \citet{strumbeljPresentFutureSoftware} for a
+review of the state of the art.
 
-\hypertarget{documentation}{%
-\section{Documentation}\label{documentation}}
+Unfortunately, currently available tools typically address one, or at
+most a handful, of Bayesian workflow activities; it is left to the
+individual project team to orchestrate the components. Writing software
+that performs this orchestration can be time-consuming and tricky,
+especially in the common scenario where it is not initially clear how
+many, or what kind of, statistical models, datasets, data manipulations
+or investigations an analysis will require.
+
+Bibat addresses this difficulty by providing a full-featured,
+high-quality Bayesian workflow project that can be extended to implement
+a wide range of statistical analyses.
+
+\section{How bibat works}\label{how-bibat-works}
+
+\subsection{Installation and usage}\label{installation-and-usage}
+
+Bibat can be installed on the Windows, linux or macos command line on by
+running the command \texttt{pip\ install\ bibat} and then used by
+running the command \texttt{bibat}. This command triggers an interactive
+form which prompts the user to select a range of customisation options.
+Bibat then creates a new directory containing code that implements an
+example analysis, with customisations reflecting the user's choices.
+This analysis works immediately, and can be reproduced with the single
+command \texttt{make\ analysis} without the need for any further action
+by the user: in this sense bibat comes with ``batteries included''.
+
+\subsection{Documentation}\label{documentation}
 
 Bibat is documented at \url{https://github.com/teddygroves/bibat/}. The
 documentation website includes instructions for getting started, a
-detailed explanation of bibat's concepts, an extended vignette
-illustrating intended usage, full description of the python API and
-command line interface, instructions for contributing and a section
-discussing accessibility considerations.
+detailed explanation of bibat's concepts and an extended vignette
+illustrating how to implement a complex statistical analysis starting
+from bibat's example analysis usage. In addition, the documentation site
+contains a full description of bibat's python API and command line
+interface, instructions for contributing and a section discussing
+accessibility considerations.
 
-\hypertarget{software}{%
-\section{Software}\label{software}}
+\section{Design choices}\label{design-choices}
 
-Bibat is implemented using Python 3. Its main dependencies are
-cookiecutter (Greenfeld et al. 2021), pydantic (Pydantic developers
-2022) and click (Click Developers 2022). Bibat is continuously tested to
-ensure that it works on the operating systems Linux, macOS and Windows.
+Bibat's design was informed by these considerations.
 
-Bibat projects use the following tools:
+\subsection{Accommodate a wide range of statistical
+analyses}\label{accommodate-a-wide-range-of-statistical-analyses}
 
-\begin{itemize}
-\tightlist
-\item
-  Python 3 (Van Rossum and Drake 2009) and standard scientific Python
-  packages for data manipulation
-\item
-  Stan (Carpenter et al. 2017) for specifying statistical models and
-  performing inferences
-\item
-  cmdstanpy (Stan Development Team 2022) for interfacing between Python
-  and Stan
-\item
-  arviz (Kumar et al. 2019) for storing and analysing completed
-  inferences
-\item
-  pydantic and pandera (Niels Bantilan 2020) for validation
-\item
-  make (Stallman and McGrath 1991) for automation.
-\item
-  Sphinx (Georg Brandl and the Sphinx team 2022) and Quarto (Allaire et
-  al. 2022) for documentation.
-\end{itemize}
+Bibat projects explicitly allow for plurality at the level of input
+datasets, prepared datasets, statistical models, fitting modes,
+computation methods and analyses. In addition, bibat ensures that there
+are minimal restrictions on the kind of components: for example,
+datasets need not be singular or tabular, and statistical models need
+not be representable in formula syntax.
 
-\hypertarget{how-bibat-addresses-specific-bayesian-workflow-difficulties}{%
-\section{How bibat addresses specific Bayesian workflow
-difficulties}\label{how-bibat-addresses-specific-bayesian-workflow-difficulties}}
+Thanks to these accommodations a project team using bibat should
+typically not need to foresee the ultimate requirements of their
+analysis before starting the project.
 
-This section describes some specific problems that often affect Bayesian
-workflow projects and which bibat helps to ameliorate.
+\subsection{Encourage reproducibility}\label{encourage-reproducibility}
 
-\hypertarget{data-modelling}{%
-\subsection{Data modelling}\label{data-modelling}}
-
-Any statistical analysis requires a definition of a prepared dataset,
-whether implicitly or explicitly. Ideally the definition is explicit and
-allows for arbitrarily many prepared datasets, accommodates both tabular
-and non-tabular formats and provides functionality like validation and
-serialisation.
-
-Bibat achieves this goal by providing abstract models for prepared data,
-preconfigured to work well together, integrated into a data preparation
-pipeline and able to be easily customised to suit any analysis.
-
-Without a template such as bibat, users must either devise a new data
-modelling framework from scratch as part of an analysis, which is
-time-consuming, or else to miss out on either the flexibility or
-features that bibat's approach provides.
-
-\hypertarget{reproducibility}{%
-\subsection{Reproducibility}\label{reproducibility}}
-
-Bibat ensures reproducibility by providing a preconfigured makefile with
-a target \texttt{analysis} triggering creation of an isolated
-environment, installation of dependencies, data preparation, statistical
-computation and analysis of results. In this way a bibat analysis can be
-reproduced on most platforms using a single command.
+Bibat provides a preconfigured makefile with a target \texttt{analysis}
+triggering creation of an isolated environment, installation of
+dependencies, data preparation, statistical computation and analysis of
+results. In this way a bibat analysis can be reproduced on most
+platforms using a single command.
 
 Bibat also provides its Python code in the form of a package configured
 using modern conventions for specifying dependencies and configuring
 tooling, so that it is easy to maintain reproducibility as the analysis
 develops.
 
-\hypertarget{collaboration}{%
-\subsection{Collaboration}\label{collaboration}}
+\subsection{Use widely-adopted, open source and actively developed
+tools}\label{use-widely-adopted-open-source-and-actively-developed-tools}
 
-Bibat provides a preconfigured test environment, continuous integration,
-linting and pre-commit hooks, making it suitable for collaborative
-software development. In addition, including documentation as a first
-class component of the analysis addresses a common problem in academic
-statistics projects where the paper gets out of sync with the code.
+Bibat projects are is written in modern Python and uses pydantic
+\citet{pydanticdevelopersPydantic2022} and pandera
+\citep{niels_bantilan-proc-scipy-2020} for data modelling, Stan
+\citep{carpenterStanProbabilisticProgramming2017} for statistical
+inference, cmdstanpy \citep{standevelopmentteamCmdStanPy2022} for
+python-Stan interface, arviz \citep{kumarArviZUnifiedLibrary2019} for
+storing and analyzing inferences and sphinx
+\citep{georgbrandlandthesphinxteamSphinx2022} and quarto
+\citep{Allaire_Quarto_2022} for documentation.
 
-\hypertarget{installing-dependencies}{%
-\subsection{Installing dependencies}\label{installing-dependencies}}
+Bibat itself is also written in modern Python and uses the popular tools
+cookiecutter \citep{greenfeldCookiecutter2021}, pydantic and click
+\citep{clickdevelopersClickPythonComposable2022}.
 
 Bibat's makefile detects the current operating system and attempts to
 install cmdstan appropriately if necessary. This functionality addresses
 a common issue where researchers find it difficult to install Stan,
 especially on Windows.
 
-\hypertarget{fitting-modes}{%
-\subsection{Fitting modes}\label{fitting-modes}}
+\subsection{Implement community standards and best practices for
+collaborative software
+development}\label{implement-community-standards-and-best-practices-for-collaborative-software-development}
 
-As part of a Bayesian workflow it is often necessary to fit a model and
+Bibat projects include a preconfigured test environment, continuous
+integration, linting and pre-commit hooks, making them suitable for
+collaborative software development. In addition, including documentation
+as a first class component of the analysis addresses a common problem in
+academic statistics projects where the paper gets out of sync with the
+code.
+
+Bibat itself is continuously tested to ensure that it works on the
+operating systems Linux, macOS and Windows. Bibat's continuous
+integration runs a test suite as well as an end-to-end functional test
+on all supported Python versions.
+
+Bibat is part of the PyOpenSci ecosystem, allowing for community help
+with maintenance as well as peer review for code and documentation
+quality, usability and accessibility. The PyOpenSci peer review for
+bibat can be found here:
+\url{https://github.com/pyOpenSci/software-submission/issues/83}
+
+\section{Challenges}\label{challenges}
+
+This section describes some specific challenges that often affect
+Bayesian workflow projects and how bibat addresses them.
+
+\subsection{Address complexity using a modular, file based
+approach}\label{address-complexity-using-a-modular-file-based-approach}
+
+As discussed in \citet{gelmanBayesianWorkflow2020}, Bayesian workflows
+are complicated, featuring plurality, cyclicity and complexity at many
+levels. Bibat accommodates this by separating non-interacting analysis
+components into modules and by serialising data to files wherever
+possible. Prepared datasets, statistical models, inference
+configurations, inference results, plots and analyses all have file
+representations. Fitting modes, data manipulations and data models are
+modularised in code through the use of appropriately structured data
+classes and functions.
+
+Thanks to this approach it is possible to perform small sub analyses
+individually and to iteratively add components without needing to
+consider everything at once.
+
+\subsection{Fitting modes}\label{fitting-modes}
+
+As part of a Bayesian workflow it can be necessary to fit a model and
 dataset in different ways. For example, one might perform MCMC sampling
 of both the prior and posterior distributions, perform multiple
 leave-out-one-fold fits for cross-validation or need to compare MCMC
 sampling with an optimisation-based alternative.
 
-Bibat accommodates this ubiquitous scenario by introducing an
-abstraction called ``fitting mode'' and a corresponding Pydantic base
-class \texttt{FittingMode}, along with and several subclasses for
-commonly used cases.
+Bibat accommodates this need by introducing an abstraction called
+``fitting mode''. This abstraction allows bibat projects to handle
+fitting a model and dataset in different ways appropriately and
+flexibly. For example, the provided prior sampling fitting mode creates
+a Stan input dictionary with the \texttt{likelihood} data variable set
+to \texttt{0}, performs MCMC sampling and writes data to the
+\texttt{InferenceData} group \texttt{prior}. Bibat provides fitting
+modes corresponding for prior sampling, posterior sampling and k-fold
+posterior sampling. Users can easily add additional fitting modes by
+copying these examples.
 
-This abstraction allows bibat projects to handle fitting a model and
-dataset in different ways appropriately and flexibly. For example, the
-provided prior sampling fitting mode creates a Stan input dictionary
-with the \texttt{likelihood} data variable set to \texttt{0}, performs
-MCMC sampling and writes data to the \texttt{InferenceData} group
-\texttt{prior}.
+\section{Post launch use}\label{post-launch-use}
 
-\hypertarget{configure-fitting-concisely.}{%
-\subsection{Configure fitting
-concisely.}\label{configure-fitting-concisely.}}
+Bibat has been used for several real statistical analyses.
 
-Bibat provides a Pydantic class \texttt{InferenceConfiguration}, parsed
-from toml files in the \texttt{inferences} directory. By writing a toml
-file per inference the user can configure statistical model, dataset,
-fitting modes and computational settings (globally or per fitting mode).
+\citet{grovesteddyDgfreg2023} used bibat to compare a Bayesian and two
+non-Bayesian approaches to modelling a biochemical thermodynamics
+dataset. Bibat facilitated this analysis even though it was not very
+large by providing the fitting mode abstraction, which was very useful
+for comparing the different methods.
 
-This approach appropriately separates configuration from logic and
-avoids unnecessary duplication of configuration for runs with the same
-model and dataset.
+In \citet{grovesBaseball2022}, Bibat was used to implement a sports
+analysis involving two datasets, two models and four inferences,
+demonstrating that the generalised Pareto distribution can be used to
+describe hitting ability in baseball. This analysis is now included in
+bibat as an illustration, along with an accompanying tutorial.
 
-\hypertarget{storing-mcmc-samples}{%
-\subsection{Storing MCMC samples}\label{storing-mcmc-samples}}
+\begin{figure}
 
-Bibat provides code that automatically saves its output
-\texttt{InferenceData} objects in zarr format. This format distributes
-information from the same set of samples into multiple smaller files,
-thereby helping to avoid file size limits of online repository hosting
-services.
+\centering{
 
-\hypertarget{comparison-with-alternative-software}{%
+\includegraphics[width=0.5\textwidth,height=\textheight]{img/baseball.png}
+
+}
+
+\caption{\label{fig-baseball}A graphical posterior predictive check
+produced as part of a bibat analysis that fit two statistical models to
+two datasets of baseball data. The coloured lines show each model's
+posterior predictive distributions and the black dots show the two
+observed datasets. See
+\url{https://github.com/teddygroves/bibat/tree/main/bibat/examples/baseball}
+for the full analysis.}
+
+\end{figure}%
+
+In \citet{grovesteddySphincter2024}, bibat was used to implement an
+analysis of cerebrovascular data from mice, involving two raw datasets,
+6 prepared datasets, 15 models and 15 inferences. In this case bibat's
+modular design made it straightforward to iteratively add data
+transformations and models while maintaining reproducibility.
+
+These cases illustrate that bibat can be useful in a variety of real
+Bayesian workflows, with different sizes, subject matters and emphases.
+
+Bibat has a growing user community, with 16 GitHub stars at the time of
+writing.
+
 \section{Comparison with alternative
-software}\label{comparison-with-alternative-software}}
+software}\label{comparison-with-alternative-software}
 
 Other than bibat, there is currently no interactive template that
 specifically targets Bayesian workflow projects. There are some
 templates that arguably encompass Bayesian workflow as a special case of
-data analysis project, such as cookiecutter-data-science (Driven Data
-2022), but these are of limited use compared with a specialised template
-due to the many specificities of Bayesian workflow.
+data analysis project, such as cookiecutter-data-science
+\citep{drivendataCookiecutterdatascience2022}, but these are of limited
+use compared with a specialised template due to the many specificities
+of Bayesian workflow.
 
 There is some software that addresses the general task of facilitating
-Bayesian workflow, but differently from bibat. For example, bambi
-(Capretto et al. 2020) and brms (Bürkner 2017) aim to make implementing
-Bayesian workflows easier by trivialising the task of specifying a
-Bayesian generalised linear model and fitting it to a single tabular
-dataset. This approach does not address several difficulties that bibat
-does address,
+Bayesian workflow, but using a different approach from bibat's. For
+example, bambi \citep{capretto2020} and brms
+\citep{burknerBrmsPackageBayesian2017} aim to make implementing Bayesian
+workflows easier by providing ergonomic ways to specify and fit Bayesian
+regression models to tabular datasets. Bibat is complementary with these
+packages, as it targets use cases that they do not support, such as
+analyses where complex datasets or custom models might be required.
 
-\hypertarget{references}{%
-\section*{References}\label{references}}
-\addcontentsline{toc}{section}{References}
+\section{Statements and Declarations}\label{statements-and-declarations}
 
-\hypertarget{refs}{}
-\begin{CSLReferences}{1}{0}
-\leavevmode\vadjust pre{\hypertarget{ref-Allaire_Quarto_2022}{}}%
-Allaire, J. J., Charles Teague, Carlos Scheidegger, Yihui Xie, and
-Christophe Dervieux. 2022. {``Quarto.''}
-\url{https://doi.org/10.5281/zenodo.5960048}.
+The authors have no financial or non-financial interests that are
+directly or indirectly related to the work submitted for publication.
 
-\leavevmode\vadjust pre{\hypertarget{ref-burknerBrmsPackageBayesian2017}{}}%
-Bürkner, Paul-Christian. 2017. {``Brms: {An R} Package for {Bayesian}
-Multilevel Models Using {Stan}.''} \emph{Journal of Statistical
-Software} 80 (1): 1--28. \url{https://doi.org/10.18637/jss.v080.i01}.
+\bibliographystyle{ACM-Reference-Format}
+\bibliography{bibliography.bib}
 
-\leavevmode\vadjust pre{\hypertarget{ref-capretto2020}{}}%
-Capretto, Tomás, Camen Piho, Ravin Kumar, Jacob Westfall, Tal Yarkoni,
-and Osvaldo A. Martin. 2020. {``Bambi: {A} Simple Interface for Fitting
-{Bayesian} Linear Models in {Python}.''}
-\url{https://arxiv.org/abs/2012.10754}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-carpenterStanProbabilisticProgramming2017}{}}%
-Carpenter, Bob, Andrew Gelman, Matthew D. Hoffman, Daniel Lee, Ben
-Goodrich, Michael Betancourt, Marcus Brubaker, Jiqiang Guo, Peter Li,
-and Allen Riddell. 2017. {``Stan: {A Probabilistic Programming
-Language}.''} \emph{Journal of Statistical Software} 76 (1): 1--32.
-\url{https://doi.org/10.18637/jss.v076.i01}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-clickdevelopersClickPythonComposable2022}{}}%
-Click Developers. 2022. {``Click: {Python} Composable Command Line
-Interface Toolkit.''} Pallets. \url{https://pypi.org/project/click/}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-drivendataCookiecutterdatascience2022}{}}%
-Driven Data. 2022. {``Cookiecutter-Data-Science.''}
-\url{https://github.com/drivendata/cookiecutter-data-science/}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-gabryVisualizationBayesianWorkflow2019}{}}%
-Gabry, Jonah, Daniel Simpson, Aki Vehtari, Michael Betancourt, and
-Andrew Gelman. 2019. {``Visualization in {Bayesian Workflow}.''}
-\emph{Journal of the Royal Statistical Society Series A: Statistics in
-Society} 182 (2): 389--402. \url{https://doi.org/10.1111/rssa.12378}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-gelmanBayesianWorkflow2020}{}}%
-Gelman, Andrew, Aki Vehtari, Daniel Simpson, Charles C. Margossian, Bob
-Carpenter, Yuling Yao, Lauren Kennedy, Jonah Gabry, Paul-Christian
-Bürkner, and Martin Modrák. 2020. {``Bayesian {Workflow}.''}
-\emph{arXiv:2011.01808 {[}Stat{]}}, November.
-\url{http://arxiv.org/abs/2011.01808}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-georgbrandlandthesphinxteamSphinx2022}{}}%
-Georg Brandl and the Sphinx team. 2022. {``Sphinx.''}
-\url{https://www.sphinx-doc.org/}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-greenfeldCookiecutter2021}{}}%
-Greenfeld, Audrey Roy, Dainiel Roy Greenfeld, Raphael Pierzina, et al.
-2021. {``Cookiecutter.''} \url{https://pypi.org/project/cookiecutter/}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-grinsztajnBayesianWorkflowDisease2021}{}}%
-Grinsztajn, Léo, Elizaveta Semenova, Charles C. Margossian, and Julien
-Riou. 2021. {``Bayesian Workflow for Disease Transmission Modeling in
-{Stan}.''} \emph{Statistics in Medicine} 40 (27): 6209--34.
-\url{https://doi.org/10.1002/sim.9164}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-kumarArviZUnifiedLibrary2019}{}}%
-Kumar, Ravin, Colin Carroll, Ari Hartikainen, and Osvaldo Martin. 2019.
-{``{ArviZ} a Unified Library for Exploratory Analysis of {Bayesian}
-Models in {Python}.''} \emph{Journal of Open Source Software} 4 (33):
-1143. \url{https://doi.org/10.21105/joss.01143}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-niels_bantilan-proc-scipy-2020}{}}%
-Niels Bantilan. 2020. {``Pandera: {Statistical Data Validation} of
-{Pandas Dataframes}.''} In \emph{Proceedings of the 19th {Python} in
-{Science Conference}}, edited by Meghann Agarwal, Chris Calloway, Dillon
-Niederhut, and David Shupe, 116--24.
-\url{https://doi.org/10.25080/Majora-342d178e-010}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-pydanticdevelopersPydantic2022}{}}%
-Pydantic developers. 2022. {``Pydantic.''}
-\url{https://pypi.org/project/pydantic/}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-stallman1991gnu}{}}%
-Stallman, Richard M, and Roland McGrath. 1991. {``{GNU} Make-{A} Program
-for Directing Recompilation.''}
-
-\leavevmode\vadjust pre{\hypertarget{ref-standevelopmentteamCmdStanPy2022}{}}%
-Stan Development Team. 2022. {``{CmdStanPy}.''}
-\url{https://github.com/stan-dev/cmdstanpy}.
-
-\leavevmode\vadjust pre{\hypertarget{ref-vanrossumPythonReferenceManual2009}{}}%
-Van Rossum, Guido, and Fred L. Drake. 2009. \emph{Python 3 {Reference
-Manual}}. {Scotts Valley, CA}: {CreateSpace}.
-
-\end{CSLReferences}
-
-
+%% begin pandoc before-bib
+%% end pandoc before-bib
+%% begin pandoc biblio
+%% end pandoc biblio
+%% begin pandoc include-after
+%% end pandoc include-after
+%% begin pandoc after-body
+%% end pandoc after-body
 
 \end{document}
+\endinput
+%%
+%% End of file `sample-manuscript.tex'.
